Two settings for my laptop/linux box

--- a/cornflakes/hypergraph/Makefile
+++ b/cornflakes/hypergraph/Makefile
@@ -1,9 +1,19 @@
+ARCH = linuxbox
+ifeq ($(ARCH),linuxbox)
 CC = gcc
 SWIG = swig3.0
+CFLAGS = -c -fpic #-framework Python
+IFLAGS = -I/usr/include/python2.7/ -I/usr/include/sys/
+LDSETTING = -shared
+else
+CC = gcc-mp-5
+SWIG = swig
+IFLAGS = -I/opt/local/Library/Frameworks/Python.framework/Headers/ -I/opt/local/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/numpy/core/include/
+LFLAGS = -lpython -lm
+LDSETTING = -dynamiclib
+endif
 
-CFLAGS = -c -fpic
-IFLAGS = -I/usr/include/python2.7/
-#LFLAGS = -lpython -lmath
+
 SWIGINFS = hypergraph_swig.i
 WRAPPERS = $(SWIGINFS:.i=_wrap.c)
 SWIGPYS = $(SWIGINFS:.i=.py)
@@ -15,7 +25,7 @@ TARGETS = _mylibrary.so
 all: $(TARGETS)
 
 $(TARGETS): $(OBJS)
-	$(CC) -shared $(OBJS) -o $@
+	$(CC) $(LDSETTING) $(OBJS) $(LFLAGS) -o $@
 
 $(WRAPPERS): %_wrap.c : %.i
 	$(SWIG) -python $<
