State-based peridynamics working. Check exRK for correctness.

--- a/cornflakes/src/Makefile
+++ b/cornflakes/src/Makefile
@@ -22,7 +22,7 @@ endif
 SWIGINFS = cornflakes_library_swig.i
 WRAPPERS = $(SWIGINFS:.i=_wrap.c)
 #SWIGPYS = $(SWIGINFS:.i=.py)
-SRCS = hypergraph.c spatialhash.c graphers.c assemble.c kernel.c dofmap.c sample_peri.c
+SRCS = hypergraph.c spatialhash.c graphers.c assemble.c kernel.c dofmap.c sample_peri.c sample_state.c
 HEADERS = $(SRCS:.c=.h)
 OBJS = $(SRCS:.c=.o)
 WRAPOBJS = $(WRAPPERS:.c=.o)
