--- a/cornflakes/src/Makefile
+++ b/cornflakes/src/Makefile
@@ -22,7 +22,8 @@ endif
 SWIGINFS = cornflakes_library_swig.i
 WRAPPERS = $(SWIGINFS:.i=_wrap.c)
 #SWIGPYS = $(SWIGINFS:.i=.py)
-SRCS = hypergraph.c spatialhash.c graphers.c assemble.c kernel.c dofmap.c sample_peri.c sample_state.c
+KERNELS = sample_peri.c sample_state.c darcy_state.c darcy_afq_state.c darcy_support_afq_state.c darcy_afq_CG.c
+SRCS = hypergraph.c spatialhash.c graphers.c assemble.c kernel.c dofmap.c $(KERNELS)
 HEADERS = $(SRCS:.c=.h)
 OBJS = $(SRCS:.c=.o)
 WRAPOBJS = $(WRAPPERS:.c=.o)
