--- a/cornflakes/src/CMakeLists.txt
+++ b/cornflakes/src/CMakeLists.txt
@@ -8,6 +8,7 @@ file(GLOB SOURCES "*.c")
 add_subdirectory(kernels)
 
 option(USE_PETSC "Enable PETSc backend for assembly" ON)
+option(USE_LIS "Enable LIS backend for assembly" ON)
 
 # Make the static library
 add_library( lib_cornflakes STATIC ${SOURCES} )
@@ -19,11 +20,20 @@ if(USE_PETSC)
   target_compile_definitions(lib_cornflakes PRIVATE -DUSE_PETSC)
   list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/cmake")
   find_package(PETSc REQUIRED)
-  INCLUDE_DIRECTORIES(${PETSC_INCLUDES})
-  ADD_DEFINITIONS(${PETSC_DEFINITIONS})
+  include_directories(${PETSC_INCLUDES})
+  add_definitions(${PETSC_DEFINITIONS})
   
   target_link_libraries(lib_cornflakes ${PPETSC_LIBRARIES})
 endif(USE_PETSC)
+if(USE_LIS)
+  set(lis_path "${PROJECT_SOURCE_DIR}/../lis/" CACHE STRING "Path to lis")
+  set(lis_lib_location "${lis_path}/src/.libs/liblis.a" CACHE STRING "Path to liblis.a for this architecture")
+  add_library(lib_lis STATIC IMPORTED)
+  set_property(TARGET lib_lis PROPERTY IMPORTED_LOCATION ${lis_lib_location})
+  target_compile_definitions(lib_cornflakes PRIVATE -DUSE_LIS)
+  include_directories(${lis_path}/include/)
+endif(USE_LIS)
+
 
 set( CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS_RELEASE} -Ofast")
 
@@ -31,22 +41,25 @@ target_link_libraries( lib_cornflakes packaged_kernels m )
 
 
 # Configure swig
-FIND_PACKAGE(SWIG REQUIRED)
-INCLUDE(${SWIG_USE_FILE})
-SET(CMAKE_SWIG_FLAGS "")
+find_package(SWIG REQUIRED)
+include(${SWIG_USE_FILE})
+set(CMAKE_SWIG_FLAGS "")
 
-FIND_PACKAGE(PythonLibs)
-INCLUDE_DIRECTORIES(${PYTHON_INCLUDE_PATH})
+find_package(PythonLibs)
+include_directories(${PYTHON_INCLUDE_PATH})
 
-INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
-SET_SOURCE_FILES_PROPERTIES(cornflakes_library_swig.i PROPERTIES SWIG_FLAGS "-includeall")
+include_directories(${CMAKE_CURRENT_SOURCE_DIR})
+set_source_files_properties(cornflakes_library_swig.i PROPERTIES SWIG_FLAGS "-includeall")
 SWIG_ADD_MODULE(cornflakes_library python cornflakes_library_swig.i ${SOURCES})
 
 if(USE_PETSC)
   #SWIG_LINK_LIBRARIES(cornflakes_library ${PETSC_LIBRARIES})
 endif(USE_PETSC)
 SWIG_LINK_LIBRARIES(cornflakes_library packaged_kernels m ${PYTHON_LIBRARIES})
-
+if(USE_LIS)
+  #set_source_files_properties( ${swig_generated_file_fullname}
+  #    PROPERTIES COMPILE_FLAGS "-DUSE_LIS")
+endif(USE_LIS)
 
 
 
