Needed extra definitions in the config

--- a/cornflakes.cmake.in
+++ b/cornflakes.cmake.in
@@ -15,3 +15,19 @@ set(CORNFLAKES_INCLUDES @CMAKE_INSTALL_PREFIX@/include @CORNFLAKES_INCLUDES@)
 set(CORNFLAKES_LIBRARIES @CORNFLAKES_LIBRARIES@)
 set(CORNFLAKES_DEFINITONS @CORNFLAKES_DEFINITIONS@)
 
+#if(USE_PETSC)
+#  find_package(PETSc REQUIRED)
+#  list(APPEND CORNFLAKES_INCLUDES ${PETSC_INCLUDES})
+#  list(APPEND CORNFLAKES_DEFINITIONS ${PETSC_DEFINITIONS})
+#  list(APPEND CORNFLAKES_LIBRARIES ${PETSC_LIBRARIES})
+#endif(USE_PETSC)
+
+if(USE_LIS)
+  add_library(lib_lis STATIC IMPORTED)
+  set_property(TARGET lib_lis PROPERTY IMPORTED_LOCATION @lis_lib_location@)
+endif(USE_LIS)
+
+add_library(lib_cornflakes STATIC IMPORTED)
+set_property(TARGET lib_cornflakes PROPERTY IMPORTED_LOCATION "${CORNFLAKES_PATH}/lib/libcornflakes.a")
+add_library(swig_cornflakes SHARED IMPORTED)
+set_property(TARGET swig_cornflakes PROPERTY IMPORTED_LOCATION "${CORNFLAKES_PATH}/pythonlib/cornflakes/_cornflakes_library.so")
