--- a/env.conf.in
+++ b/env.conf.in
@@ -4,3 +4,4 @@ ENVPATH=@CMAKE_INSTALL_PREFIX@
 
 export PYTHONPATH=$ENVPATH/pythonlib:$PYTHONPATH
 export PATH=$ENVPATH/bin:$PATH
+export LD_LIBRARY_PATH=$ENVPATH/lib:$LD_LIBRARY_PATH
