Added support for discriminated shared/static linking and LIS as a shared lib

--- a/cornflakes.cmake.in
+++ b/cornflakes.cmake.in
@@ -12,8 +12,10 @@ endif()
 
 set(CORNFLAKES_PATH @CMAKE_INSTALL_PREFIX@)
 set(CORNFLAKES_INCLUDES @CMAKE_INSTALL_PREFIX@/include @CORNFLAKES_INCLUDES@)
-set(CORNFLAKES_LIBRARIES @CORNFLAKES_LIBRARIES@)
-set(CORNFLAKES_DEFINITONS @CORNFLAKES_DEFINITIONS@)
+set(CORNFLAKES_SHARED_LIBRARIES @CORNFLAKES_SHARED_LIBRARIES@)
+set(CORNFLAKES_STATIC_LIBRARIES @CORNFLAKES_STATIC_LIBRARIES@)
+
+set(CORNFLAKES_DEFINITIONS @CORNFLAKES_DEFINITIONS@)
 
 #if(USE_PETSC)
 #  find_package(PETSc REQUIRED)
