--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -110,30 +110,33 @@ if(USE_PETSC)
 
   #set(PETSC_DIR /home/afq/Downloads/petsc)
   #set(PETSC_ARCH arch-linux2-c-debug )
-  target_compile_definitions(cornflakes PRIVATE -DUSE_PETSC)
+  #target_compile_definitions(cornflakes PRIVATE -DUSE_PETSC)
   list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/cmake")
   find_package(PETSc REQUIRED)
   list(APPEND CORNFLAKES_INCLUDES ${PETSC_INCLUDES})
   list(APPEND CORNFLAKES_DEFINITIONS ${PETSC_DEFINITIONS} -DUSE_PETSC)
-  list(APPEND CORNFLAKES_LIBRARIES ${PETSC_LIBRARIES})
+  list(APPEND CORNFLAKES_STATIC_LIBRARIES ${PETSC_LIBRARIES})
+  list(APPEND CORNFLAKES_SHARED_LIBRARIES ${PETSC_LIBRARIES})
 endif(USE_PETSC)
 
 if(USE_LIS)
   set(lis_path "/home/afq/Research/Distribute/Stonedist" CACHE STRING "Path to lis")
-  set(lis_lib_location "${lis_path}/lib/liblis.a")
-  add_library(lib_lis STATIC IMPORTED)
-  set_property(TARGET lib_lis PROPERTY IMPORTED_LOCATION ${lis_lib_location})
+  #set(lis_lib_location "${lis_path}/lib/liblis.a")
+  #add_library(lisstatic STATIC IMPORTED)
+  #set_property(TARGET lis PROPERTY IMPORTED_LOCATION ${lis_lib_location})
+  #set_property(TARGET lib_lis PROPERTY IMPORTED_LOCATION ${lis_lib_location})
   #target_compile_definitions(cornflakes PRIVATE -DUSE_LIS)
   list(APPEND CORNFLAKES_DEFINITIONS -DUSE_LIS)
   list(APPEND CORNFLAKES_INCLUDES ${lis_path}/include/)
-  list(APPEND CORNFLAKES_LIBRARIES lib_lis)
+  list(APPEND CORNFLAKES_STATIC_LIBRARIES "${lis_path}/lib/liblis.a")
+  list(APPEND CORNFLAKES_SHARED_LIBRARIES "${lis_path}/lib/liblis.so")
 endif(USE_LIS)
 
 
-target_link_libraries(cornflakes ${CORNFLAKES_LIBRARIES} )
+target_link_libraries(cornflakes ${CORNFLAKES_STATIC_LIBRARIES} )
 include_directories( ${CORNFLAKES_INCLUDES} )
-target_compile_definitions(cornflakes PRIVATE ${CORNFLAKES_DEFINITIONS})
-
+#target_compile_definitions(cornflakes PRIVATE ${CORNFLAKES_DEFINITIONS})
+add_definitions( ${CORNFLAKES_DEFINITIONS} )
 set( CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS_RELEASE} -Ofast")
 
 target_link_libraries( cornflakes packaged_kernels m )
@@ -154,7 +157,7 @@ swig_add_module(cornflakes_library python src/cornflakes_library_swig.i ${SOURCE
 if(USE_PETSC)
   #SWIG_LINK_LIBRARIES(cornflakes_library ${PETSC_LIBRARIES})
 endif(USE_PETSC)
-swig_link_libraries(cornflakes_library packaged_kernels m ${PYTHON_LIBRARIES})
+swig_link_libraries(cornflakes_library packaged_kernels m ${PYTHON_LIBRARIES} ${CORNFLAKES_SHARED_LIBRARIES})
 if(USE_LIS)
   #set_source_files_properties( ${swig_generated_file_fullname}
   #    PROPERTIES COMPILE_FLAGS "-DUSE_LIS")
