Added python stuff to cmake config

--- a/cornflakes.cmake.in
+++ b/cornflakes.cmake.in
@@ -14,15 +14,10 @@ set(CORNFLAKES_PATH @CMAKE_INSTALL_PREFIX@)
 set(CORNFLAKES_INCLUDES @CMAKE_INSTALL_PREFIX@/include @CORNFLAKES_INCLUDES@)
 set(CORNFLAKES_SHARED_LIBRARIES @CORNFLAKES_SHARED_LIBRARIES@)
 set(CORNFLAKES_STATIC_LIBRARIES @CORNFLAKES_STATIC_LIBRARIES@)
-
 set(CORNFLAKES_DEFINITIONS @CORNFLAKES_DEFINITIONS@)
 
-#if(USE_PETSC)
-#  find_package(PETSc REQUIRED)
-#  list(APPEND CORNFLAKES_INCLUDES ${PETSC_INCLUDES})
-#  list(APPEND CORNFLAKES_DEFINITIONS ${PETSC_DEFINITIONS})
-#  list(APPEND CORNFLAKES_LIBRARIES ${PETSC_LIBRARIES})
-#endif(USE_PETSC)
+set(PYTHON_INCLUDE_DIR @PYTHON_INCLUDE_DIR@)
+set(PYTHON_LIBRARY @PYTHON_LIBRARY@)
 
 if(USE_LIS)
   add_library(lib_lis STATIC IMPORTED)
