Improved the installed environment variables

--- a/cornflakes.cmake.in
+++ b/cornflakes.cmake.in
@@ -2,6 +2,9 @@
 set(USE_PETSC @USE_PETSC@)
 set(USE_LIS @USE_LIS@)
 
+set(CMAKE_C_COMPILER @CMAKE_C_COMPILER@)
+set(CMAKE_FORTRAN_COMPILER @CMAKE_FORTRAN_COMPILER@)
+
 find_package(OpenMP REQUIRED)
 if(OPENMP_FOUND)
   message("OPENMP FOUND")
