--- a/env.bash.conf.in
+++ b/env.bash.conf.in
@@ -2,6 +2,8 @@
 
 ENVPATH=@CMAKE_INSTALL_PREFIX@
 
+export CC=@CMAKE_C_COMPILER@
+export CORNFLAKES_DIR=$ENVPATH
 export PYTHONPATH=$ENVPATH/pythonlib:$PYTHONPATH
 export PATH=$ENVPATH/bin:$PATH
 export LD_LIBRARY_PATH=$ENVPATH/lib:$LD_LIBRARY_PATH
