Documenting it more

--- a/superbuild/Dockerfile
+++ b/superbuild/Dockerfile
@@ -6,6 +6,7 @@ RUN apt-get -y install cmake make g++ gfortran git python
 RUN apt-get -y install libblas-dev liblapack-dev
 RUN apt-get -y install openmpi-bin openmpi-common libopenmpi-dev libopenmpi2
 RUN apt-get -y install swig python-numpy python-scipy python-matplotlib python-sympy
+RUN apt-get -y install ipython
 RUN apt-get -y install libgsl-dev
 
 # Set the working directory
