--- a/env.bash.conf.in
+++ b/env.bash.conf.in
@@ -4,6 +4,6 @@ ENVPATH=@CMAKE_INSTALL_PREFIX@
 
 export CC=@CMAKE_C_COMPILER@
 export CORNFLAKES_DIR=$ENVPATH
-export PYTHONPATH=$ENVPATH/pythonlib:$PYTHONPATH
+export PYTHONPATH=$ENVPATH/pythonlib:$ENVPATH/lib/python2.7/site-packages/:$PYTHONPATH
 export PATH=$ENVPATH/bin:$PATH
 export LD_LIBRARY_PATH=$ENVPATH/lib:$LD_LIBRARY_PATH
