updated python3 refs

--- a/cornflakes.cmake.in
+++ b/cornflakes.cmake.in
@@ -20,8 +20,8 @@ set(CORNFLAKES_SHARED_LIBRARIES @CORNFLAKES_SHARED_LIBRARIES@)
 set(CORNFLAKES_STATIC_LIBRARIES @CORNFLAKES_STATIC_LIBRARIES@)
 set(CORNFLAKES_DEFINITIONS @CORNFLAKES_DEFINITIONS@)
 
-set(PYTHON_INCLUDE_DIR @PYTHON_INCLUDE_DIR@)
-set(PYTHON_LIBRARY @PYTHON_LIBRARY@)
+set(Python3_INCLUDE_DIRS @Python3_INCLUDE_DIRS@)
+set(Python3LIBRARIES @Python3_LIBRARIES@)
 
 if(USE_LIS)
   add_library(lib_lis STATIC IMPORTED)
