Saving the cmake executable in the config

--- a/cornflakes.cmake.in
+++ b/cornflakes.cmake.in
@@ -2,6 +2,7 @@
 set(USE_PETSC @USE_PETSC@)
 set(USE_LIS @USE_LIS@)
 
+set(CMAKE_COMMAND @CMAKE_COMMAND@)
 set(CMAKE_C_COMPILER @CMAKE_C_COMPILER@)
 set(CMAKE_CXX_COMPILER @CMAKE_CXX_COMPILER@)
 set(CMAKE_FORTRAN_COMPILER @CMAKE_FORTRAN_COMPILER@)
