--- a/env.bash.conf.in
+++ b/env.bash.conf.in
@@ -8,3 +8,4 @@ export CORNFLAKES_DIR=$ENVPATH
 export PYTHONPATH=$ENVPATH/pythonlib:$ENVPATH/lib/python3.7/site-packages/:$PYTHONPATH
 export PATH=$ENVPATH/bin:$PATH
 export LD_LIBRARY_PATH=$ENVPATH/lib:$LD_LIBRARY_PATH
+export CMAKE_COMMAND=@CMAKE_COMMAND@
