csh environment variables

--- a/env.csh.conf.in
+++ b/env.csh.conf.in
@@ -3,6 +3,8 @@
 setenv ENVPATH @CMAKE_INSTALL_PREFIX@
 
 setenv CC              @CMAKE_C_COMPILER@
+setenv CXX             @CMAKE_CXX_COMPILER@
+setenv CMAKE_COMMAND   @CMAKE_COMMAND@
 setenv CORNFLAKES_DIR  $ENVPATH
 setenv PATH            $ENVPATH/bin\:$PATH
 setenv PYTHONPATH      $ENVPATH/pythonlib\:$ENVPATH/lib/python3.7/site-packages/\:$PYTHONPATH
